src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Support_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Support Item</label>
        <referenceTo>maica_cc__Support_Item__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Support_Category__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Represents the Support Category that the Product belongs to.</description>
        <inlineHelpText>Represents the Support Category that the Product belongs to.</inlineHelpText>
        <label>Support Category</label>
        <referenceTo>maica_cc__Support_Category__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Day__c</fullName>
        <description>The specific day or delivery window when the Product is eligible for Service Delivery.</description>
        <inlineHelpText>The specific day or delivery window when the Product is eligible for Service Delivery.</inlineHelpText>
        <label>Service Day</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Weekday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Public Holiday</fullName>
                </value>
                <value>
                    <fullName>Anytime</fullName>
                    <default>true</default>
                    <label>Anytime</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Time__c</fullName>
        <description>The specific time of day when the Product is eligible for Service Delivery.</description>
        <inlineHelpText>The specific time of day when the Product is eligible for Service Delivery.</inlineHelpText>
        <label>Service Time</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daytime</fullName>
                </value>
                <value>
                    <fullName>Afternoon</fullName>
                </value>
                <value>
                    <fullName>Evening</fullName>
                </value>
                <value>
                    <fullName>Night</fullName>
                </value>
                <value>
                    <fullName>Anytime</fullName>
                    <default>true</default>
                    <label>Anytime</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>